--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api/routes/(.*)",
-        "dest": "/api/index.js"
+        "src": "routes/(.*)",
+        "dest": "index.js"
       }
     ]
   }
