--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
       {
-        "src": "routes/(.*)",
+        "src": "routes/tasks.js",
         "dest": "index.js"
       }
     ]
